Fixed Alignment and Transition

--- a/styles/about.css
+++ b/styles/about.css
@@ -37,8 +37,26 @@ h1 {
     width: 824px;
     height: 465px;
     position: absolute;
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.5s, transform 0.5s; 
     opacity: 0;
+}
+
+.active {
+    transform: translateZ(0) scale(1) rotate(0deg); 
+    opacity: 1;
+    z-index: 2;
+}
+
+.next-1 {
+    transform: translateZ(0) scale(0.84) rotate(10deg);
+    opacity: 1;
+    z-index: 1;
+}
+
+.pre-1 {
+    transform: translateZ(0) scale(0.84) rotate(-10deg);
+    opacity: 1;
+    z-index: 1;
 }
 
 .rsvp-button {
@@ -80,6 +98,8 @@ h1 {
     color: #eee;
     font-size: 16px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center; 
+    max-width: 90%;
 }
 
 .text {
